# arbitrage

./: README.md
.github/workflows/: build-redrising.yml
controlplane/: .air.toml  .env.example  .gitignore  go.mod  go.sum
controlplane/cmd/server/: main.go
controlplane/cmd/server/static/: host.html  index.html  settings.html  style.css
controlplane/internal/handlers/: api.go
controlplane/internal/middleware/: auth.go  cors.go
controlplane/internal/models/: models.go
controlplane/internal/store/: store.go
controlplane/internal/ws/: hub.go
dropship/darwinium/: .gitignore  go.mod  go.sum  main.go
dropship/redrising/: .gitignore  CMakeLists.txt  toolchain-mingw.cmake
dropship/redrising/installer/nsis/: License.txt  redrising.nsi
dropship/redrising/lib/: CMakeLists.txt
dropship/redrising/src/: CMakeLists.txt  client.cpp  client.h  commands.cpp  commands.h  main.cpp  permissions.cpp  permissions.h  stats.cpp  stats.h  terminal.cpp  terminal.h
dropship/redrising/src/shadow/: shadow.cpp  shadow_service.cpp  shadow_service.h
